--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-7c8cb20  animated bounceInLeft delay1 duration1 eds-on-scroll elementor-widget elementor-widget-heading" data-id="7c8cb20" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Mainly, a joke.</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">I like domains.</h2>		</div>
 				</div>
 						</div>
 			</div>
